--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:11.0.4'
     compile 'com.google.android.gms:play-services-location:11.0.4'
     compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.squareup.okhttp3:okhttp:3.8.0'
     testCompile 'junit:junit:4.12'
     testCompile 'com.github.tomakehurst:wiremock-standalone:2.10.1'
 }
